--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-
+asgiref             3.5.2
 attrs               22.1.0
 autobahn            22.7.1
 Automat             20.2.0
@@ -11,7 +11,7 @@ Django              4.0.6
 hyperlink           21.0.0
 idna                3.3
 incremental         21.3.0
-pip                 22.0.4
+pip                 22.2.2
 pyasn1              0.4.8
 pyasn1-modules      0.2.8
 pycparser           2.21
